k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eulard
  labels:
    app.kubernetes.io/part-of: eulard
    app.kubernetes.io/managed-by: kubectl
