k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eulard-web
  namespace: eulard
  labels:
    app.kubernetes.io/part-of: eulard
spec:
  type: NodePort
  selector:
    app: eulard-web
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
