k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eulard-ingress
  namespace: eulard
  labels:
    app.kubernetes.io/part-of: eulard
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "eulard-ip"
    networking.gke.io/managed-certificates: "eulard-cert"
    networking.gke.io/v1beta1.FrontendConfig: "eulard-frontend-config"
    kubernetes.io/ingress.allow-http: "true"
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: eulard-web
      port:
        number: 3000
  rules:
    - host: eulard.kelihi.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eulard-web
                port:
                  number: 3000
